--- a/REGRESSİON_WORK_2.ipynb
+++ b/REGRESSİON_WORK_2.ipynb
@@ -360,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -369,7 +369,7 @@
        "LinearRegression(copy_X=True, fit_intercept=True, n_jobs=None, normalize=False)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -377,7 +377,7 @@
    "source": [
     "Y = prices['SalePrice']\n",
     "X = prices[['OverallQual', 'GrLivArea', 'GarageCars', 'GarageArea',\n",
-    "       'TotalBsmtSF', '1stFlrSF', 'FullBath', 'TotRmsAbvGrd', 'YearBuilt',\n",
+    "       'TotalBsmtSF', '1stFlrSF', 'FullBath', 'YearBuilt',\n",
     "       'YearRemodAdd']]\n",
     "lrm = linear_model.LinearRegression()\n",
     "lrm.fit(X, Y)"
@@ -517,6 +517,155 @@
       ]
      },
      "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import statsmodels.api as sm\n",
+    "\n",
+    "X = sm.add_constant(X)\n",
+    "results = sm.OLS(Y, X).fit()\n",
+    "results.summary()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "'TotRmsAbvGrd' sütununun p değeri çok yüksek olduğundan anlamlı bir değerlendirme yapılamaz bu nedenle bu değeri OLS testinden çıkarabiliriz."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"simpletable\">\n",
+       "<caption>OLS Regression Results</caption>\n",
+       "<tr>\n",
+       "  <th>Dep. Variable:</th>        <td>SalePrice</td>    <th>  R-squared:         </th> <td>   0.774</td> \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Model:</th>                   <td>OLS</td>       <th>  Adj. R-squared:    </th> <td>   0.772</td> \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Method:</th>             <td>Least Squares</td>  <th>  F-statistic:       </th> <td>   550.8</td> \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Date:</th>             <td>Wed, 22 Jan 2020</td> <th>  Prob (F-statistic):</th>  <td>  0.00</td>  \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Time:</th>                 <td>23:20:16</td>     <th>  Log-Likelihood:    </th> <td> -17459.</td> \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>No. Observations:</th>      <td>  1460</td>      <th>  AIC:               </th> <td>3.494e+04</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Df Residuals:</th>          <td>  1450</td>      <th>  BIC:               </th> <td>3.499e+04</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Df Model:</th>              <td>     9</td>      <th>                     </th>     <td> </td>    \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Covariance Type:</th>      <td>nonrobust</td>    <th>                     </th>     <td> </td>    \n",
+       "</tr>\n",
+       "</table>\n",
+       "<table class=\"simpletable\">\n",
+       "<tr>\n",
+       "        <td></td>          <th>coef</th>     <th>std err</th>      <th>t</th>      <th>P>|t|</th>  <th>[0.025</th>    <th>0.975]</th>  \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>const</th>        <td>-1.186e+06</td> <td> 1.28e+05</td> <td>   -9.241</td> <td> 0.000</td> <td>-1.44e+06</td> <td>-9.34e+05</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>OverallQual</th>  <td>  1.96e+04</td> <td> 1187.658</td> <td>   16.505</td> <td> 0.000</td> <td> 1.73e+04</td> <td> 2.19e+04</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>GrLivArea</th>    <td>   51.3821</td> <td>    3.107</td> <td>   16.536</td> <td> 0.000</td> <td>   45.287</td> <td>   57.477</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>GarageCars</th>   <td> 1.043e+04</td> <td> 3032.638</td> <td>    3.438</td> <td> 0.001</td> <td> 4476.579</td> <td> 1.64e+04</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>GarageArea</th>   <td>   14.9263</td> <td>   10.283</td> <td>    1.452</td> <td> 0.147</td> <td>   -5.245</td> <td>   35.097</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>TotalBsmtSF</th>  <td>   19.8561</td> <td>    4.283</td> <td>    4.636</td> <td> 0.000</td> <td>   11.454</td> <td>   28.258</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>1stFlrSF</th>     <td>   14.1741</td> <td>    4.928</td> <td>    2.876</td> <td> 0.004</td> <td>    4.507</td> <td>   23.841</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>FullBath</th>     <td>-6780.2962</td> <td> 2657.525</td> <td>   -2.551</td> <td> 0.011</td> <td> -1.2e+04</td> <td>-1567.291</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>YearBuilt</th>    <td>  268.1205</td> <td>   50.165</td> <td>    5.345</td> <td> 0.000</td> <td>  169.717</td> <td>  366.524</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>YearRemodAdd</th> <td>  296.4379</td> <td>   63.596</td> <td>    4.661</td> <td> 0.000</td> <td>  171.688</td> <td>  421.188</td>\n",
+       "</tr>\n",
+       "</table>\n",
+       "<table class=\"simpletable\">\n",
+       "<tr>\n",
+       "  <th>Omnibus:</th>       <td>478.177</td> <th>  Durbin-Watson:     </th> <td>   1.985</td> \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Prob(Omnibus):</th> <td> 0.000</td>  <th>  Jarque-Bera (JB):  </th> <td>58969.223</td>\n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Skew:</th>          <td>-0.413</td>  <th>  Prob(JB):          </th> <td>    0.00</td> \n",
+       "</tr>\n",
+       "<tr>\n",
+       "  <th>Kurtosis:</th>      <td>34.124</td>  <th>  Cond. No.          </th> <td>4.67e+05</td> \n",
+       "</tr>\n",
+       "</table><br/><br/>Warnings:<br/>[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.<br/>[2] The condition number is large, 4.67e+05. This might indicate that there are<br/>strong multicollinearity or other numerical problems."
+      ],
+      "text/plain": [
+       "<class 'statsmodels.iolib.summary.Summary'>\n",
+       "\"\"\"\n",
+       "                            OLS Regression Results                            \n",
+       "==============================================================================\n",
+       "Dep. Variable:              SalePrice   R-squared:                       0.774\n",
+       "Model:                            OLS   Adj. R-squared:                  0.772\n",
+       "Method:                 Least Squares   F-statistic:                     550.8\n",
+       "Date:                Wed, 22 Jan 2020   Prob (F-statistic):               0.00\n",
+       "Time:                        23:20:16   Log-Likelihood:                -17459.\n",
+       "No. Observations:                1460   AIC:                         3.494e+04\n",
+       "Df Residuals:                    1450   BIC:                         3.499e+04\n",
+       "Df Model:                           9                                         \n",
+       "Covariance Type:            nonrobust                                         \n",
+       "================================================================================\n",
+       "                   coef    std err          t      P>|t|      [0.025      0.975]\n",
+       "--------------------------------------------------------------------------------\n",
+       "const        -1.186e+06   1.28e+05     -9.241      0.000   -1.44e+06   -9.34e+05\n",
+       "OverallQual    1.96e+04   1187.658     16.505      0.000    1.73e+04    2.19e+04\n",
+       "GrLivArea       51.3821      3.107     16.536      0.000      45.287      57.477\n",
+       "GarageCars    1.043e+04   3032.638      3.438      0.001    4476.579    1.64e+04\n",
+       "GarageArea      14.9263     10.283      1.452      0.147      -5.245      35.097\n",
+       "TotalBsmtSF     19.8561      4.283      4.636      0.000      11.454      28.258\n",
+       "1stFlrSF        14.1741      4.928      2.876      0.004       4.507      23.841\n",
+       "FullBath     -6780.2962   2657.525     -2.551      0.011    -1.2e+04   -1567.291\n",
+       "YearBuilt      268.1205     50.165      5.345      0.000     169.717     366.524\n",
+       "YearRemodAdd   296.4379     63.596      4.661      0.000     171.688     421.188\n",
+       "==============================================================================\n",
+       "Omnibus:                      478.177   Durbin-Watson:                   1.985\n",
+       "Prob(Omnibus):                  0.000   Jarque-Bera (JB):            58969.223\n",
+       "Skew:                          -0.413   Prob(JB):                         0.00\n",
+       "Kurtosis:                      34.124   Cond. No.                     4.67e+05\n",
+       "==============================================================================\n",
+       "\n",
+       "Warnings:\n",
+       "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n",
+       "[2] The condition number is large, 4.67e+05. This might indicate that there are\n",
+       "strong multicollinearity or other numerical problems.\n",
+       "\"\"\""
+      ]
+     },
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
